# EFS-forecasting

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Final data ver3.csv  LICENSE  README.md  README.zh-CN.md  SECURITY.md  batch_predict.m  main.m  mkdocs.yml  pyproject.toml  quick_start_template.m  run
.github/workflows/: matlab.yml  pages.yml  python.yml
configs/: benchmark.private.example.yaml  benchmark.private.python-it2.example.yaml  benchmark.python-it2.smoke.yaml  benchmark.smoke.yaml  benchmark.yaml
data/: README.md
data/precomputed/synthetic-smoke/: PROVENANCE.md  category_summary.csv  macro_metrics.csv  macro_summary.csv  manifest.json  metrics.csv  predictions.csv  (+3 more)
data/sample/: synthetic_demand.csv
docs/: architecture.md  index.md  limitations.md  methodology.md  reproducibility.md  results.md  thesis-alignment.md
evaluation/: evaluateModel.m
fis/: advancedTuning.m  autoNameOutputMFs.m  initializeFIS.m  learnRules.m  printFuzzyRules.m  tuneParameters.m
matlab/+adaptforecast/: evaluate.m  explain.m  initializeFIS.m  predict.m  predictJob.m  runJob.m  semanticizeOutputs.m  train.m
scripts/: generate_sample_data.py  prepare_matlab_smoke_jobs.py  verify_smoke_artifact.py
src/adaptforecast/: __init__.py  artifacts.py  baselines.py  benchmark.py  cli.py  config.py  data.py  matlab_bridge.py  metrics.py  plots.py  python_it2.py  schema.py  streamlit_app.py  verification.py
tests/matlab/: TestCore.m  TestFileContract.m
tests/python/: test_baselines.py  test_benchmark.py  test_data.py  test_matlab_bridge.py  test_metrics.py  test_python_it2.py  test_schema.py  test_smoke_verifier.py
utils/: dataLoader.m  datasetCreator.m
(+14 files in other folders)
