[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "adaptforecast"
version = "0.2.0"
description = "Auditable small-data demand forecasting with interval type-2 fuzzy systems"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "HUANG Zhonghuan"}]
keywords = ["demand-forecasting", "fuzzy-logic", "supply-chain", "explainable-ai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "matplotlib>=3.8,<4",
  "PyYAML>=6.0,<7",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
benchmark = ["statsmodels>=0.14,<1", "torch>=2.2,<3"]
app = ["streamlit>=1.37,<2", "plotly>=5.22,<7"]
docs = ["mkdocs>=1.6,<2", "mkdocs-material>=9.5,<10"]
dev = ["pytest>=8,<9", "pytest-cov>=5,<7", "ruff>=0.5,<1"]
all = [
  "statsmodels>=0.14,<1",
  "torch>=2.2,<3",
  "streamlit>=1.37,<2",
  "plotly>=5.22,<7",
  "mkdocs>=1.6,<2",
  "mkdocs-material>=9.5,<10",
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.5,<1",
]

[project.scripts]
adaptforecast = "adaptforecast.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/adaptforecast"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"] # Typer declares CLI metadata in parameter defaults by design.
